--- a/static/style.css
+++ b/static/style.css
@@ -79,7 +79,7 @@ html {
 .progress {
   height: 100%;
   width: 0%;
-  background-color: #b5f38f;
+  background-color: #d49450;
   border-radius: 3px;
 }
 
